[package]
name = "docker-compose"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@palantir.com>"]

[lib]
test = false

[[test]]
name = "test"
path = "tests/test.rs"
harness = false

[dependencies]
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
env_logger = "0.7"
